--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -3,7 +3,8 @@
 @font-face {
 	font-family: 'GmarketSansMedium';
 	src:
-		url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+		url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff')
+		format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -20,6 +21,6 @@ li {
 	list-style: none;
 }
 
-header>div>ul>li {
+header > div > ul > li {
 	margin-right: 30px;
 }
