--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -33,7 +33,9 @@
 				</li>
 				<li>
 					<div class="dropdown dropdown-hover">
-						<div tabindex="0" role="button">LIST</div>
+						<div tabindex="0" role="button">
+							<a href="../article/list?boardId=1">LIST</a>
+						</div>
 						<ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
 							<li>
 								<a href="../article/list?boardId=1">NOTICE</a>
